﻿2012-06-28  Nicole Cordes <cordes@cps-it.de>

	* Fixed Bug #32941: datetime field validation via jquery 08:00 - 09:00 is broken
	* Changed hard links to jQuery CDN in typoscript setup to configuration parameter

2012-06-27  Nicole Cordes <cordes@cps-it.de>

	* Fixed Bug #38423: DB Error in ext:pi1/class.tx_powermail_form.php in funcion tabindexArray() Line 218 (Thanks to Björn Heinermann)
	* Added server side validation for all options (even extended typoscript validation possibilities)

2012-06-26  Nicole Cordes <cordes@cps-it.de>

	* Fixed duplicate call of tx_powermail_mandatory
	* Added character encoding for all action and typoscript links

2012-06-25  Nicole Cordes <cordes@cps-it.de>

	* Fixed Bug #32682: preselection of selectboxes fails if typoscript (prefill.xxxxx) is defined (Thanks to Markus Müller)
	* Fixed Bug #32934: xhtml validation fails because of formaction (Thanks to Philipp Kitzberger)
	* Set default value for plugin.powermail.label.parse to 0 due to security reasons
	* Fixed label rendering when plugin.powermail.label.parse is disabled
	* Cleaned up SQL statements

2012-06-23  Nicole Cordes <cordes@cps-it.de>

	* Added Feature #30190: Hook in module class (Thanks to Julia Pardanaud)
	* Fixed Bug #30438: validate-alpha-w-umlauts and validate-alphanum-w-umlaut in 1.6.4 broken (Thanks to Tobias)
	* Fixed Bug #30705: XLS export : unable to download in IE (Thanks to Julien Henchoz)
	* Removed header variable from mod1/class.tx_powermail_export.php as header()-function hasn't any return value
	* Fixed Bug #31011: Field validation doesnt work correctly (Thanks to Arek)
	* Fixed Bug #31029: Absolute path to icon_info.gif (Thanks to Markus Klein)
	* Added Feature #31340: no html possible in label of checkbox (Thanks to Martin Holtz)
	* Updated jQuery and jQuery Tools to the latest versions

2012-06-21  Nicole Cordes <cordes@cps-it.de>

	* Fixed Bug #38246: DB Error in ext:lib/class.tx_powermail_functions_div.php Line 427 (Thanks to Björn Heinermann)
