@@ -47,7 +47,7 @@ class tx_powermail_pi1_wizicon {
 
 	/**
 	 * Processing the wizard items array
-	 * 
+	 *
 	 * @param	array		$wizardItems: The wizard items
 	 * @return	array		array with wizard items
 	 */
@@ -60,18 +60,18 @@ class tx_powermail_pi1_wizicon {
 			'icon' => t3lib_extMgm::extRelPath('powermail') . 'pi1/ce_wiz.gif',
 			'title' => $LANG->getLLL('pi1_title', $LL),
 			'description' => $LANG->getLLL('pi1_plus_wiz_description', $LL),
-			'params' => '&defVals[tt_content][CType]=powermail_pi1&defVals[tt_content][list_type]=powermail_pi1',
+			'params' => '&defVals[tt_content][CType]=powermail_pi1',
 			'tt_content_defValues' => array(
 				'CType' => 'powermail_pi1',
 			),
 		);
-		
+
 		return $wizardItems;
 	}
 
 	/**
 	 * Reads the [extDir]/locallang.xml and returns the \$LOCAL_LANG array found in that file.
-	 * 
+	 *
 	 * @return	The array with language labels
 	 */
 	function includeLocalLang()	{
