@@ -2,6 +2,7 @@
 
 	* Fixed Bug #32941: datetime field validation via jquery 08:00 - 09:00 is broken
 	* Changed hard links to jQuery CDN in typoscript setup to configuration parameter
+	* Fixed Bug #33021: No Icon in New Content Element wizard when using explicitADMode = explicitAllow
 
 2012-06-27  Nicole Cordes <cordes@cps-it.de>
 
